# loop_extrusion_contact_dynamics

./: .copier-answers.yml  .gitignore  README.md  Snakefile  Snakefile_cells_1a2  Snakefile_cells_long  pyproject.toml
docs/source/: api.md  conf.py
image_analysis/: .gitignore  .gitmodules
image_analysis/infrastructure/: README.md
image_analysis/workflows/: Snakefile  Snakefile_burst
infrastructure/env-yamls/: localization_precision_estimation-env.yaml
ipa/: processing.py  processing_1b2.py  processing_new.py  processing_new_kristina.py  processing_pia_images.py
ipa/scripts/: beads.py  compute_tracks.py  distance_doublets.py  processing_new_kristina.py  spot_detection.py  spot_detection_single_frame.py  track_cells.py
ipa/src/: analysis_utils.py  build_config_file.py  build_config_file_cells.py  correction_utils.py  create_tracks_no_beads.py  detection_utils.py  gaussmle.py  localization_utils.py  preprocessing_utils.py  run_beads_detection_registration.py  run_cells_detection_registration.py  run_detections_snakemake.py  run_detections_snakemake_dask_args.py  snakemake_utils.py  track_cells.py  tracking_utils.py
scratchpad/: cell_colocalization.ipynb  cells_trakcpy.py  chromatic_aberration_correction.ipynb  chromatic_aberration_correction_new.ipynb  chromatic_aberration_correction_working.ipynb  open_images.ipynb  rerun_loc.py  test_exp_data.ipynb  test_mle.ipynb  test_results_matrigel.ipynb
workflows/: Snakefile  Snakefile_1b2  Snakefile_cells_hmax  Snakefile_cells_kristina  Snakefile_cells_pia_movies  Snakefile_test_doublets  Snakefile_test_filtering
(+9 files in other folders)
