[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipa"
version = "0.1.0"
description = "A package for image processing and analysis"
readme = "README.md"
authors = [
    { name = "Nessim Louafi", email = "nessim.louafi@fmi.ch" }
]
license = { text = "MIT" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "tqdm"
]

[tool.setuptools.packages.find]
where = ["ipa/src"]
